fix: 제미나이 의견수용